fix: fix sidenav z-index

--- a/src/components/index.less
+++ b/src/components/index.less
@@ -47,6 +47,7 @@ oui-showcase { display: block; }
   width: rem-calc(300);
   overflow: hidden;
   overflow-y: auto;
+  z-index: 0;
 }
 
 .oui-showcase__main {
